# trestle-roundhouse

./: .eslintrc.json  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENT_INSTRUCTIONS.md  README-dev.md  README.md  biome.json  control_point.sh  import_test.py  mypy.ini  nx.json  package-lock.json  package.json  pyrightconfig.json  ruff.toml  spec_001_ai_governed_system_development_methodology.md  trestle.repo.json  tsconfig.base.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  trestle-quality.yml
.nx/cache/: file-map.json  lockfile.hash  nx_files.nxt  (+3 more)
.trestle/: standards.snapshot.json
apps/backend/: README.md  main.py  pyproject.toml  run.sh
apps/backend/roundhouse/: .env.example  __init__.py  settings.py
apps/backend/roundhouse/api/: __init__.py  artifact_routes.py  deps.py  ha_routes.py  nodes_routes.py  panel_routes.py  simulator_inventory_routes.py  simulator_selection_routes.py  simulator_viewer_routes.py  trestle_routes.py
apps/backend/roundhouse/ha/: __init__.py  client.py  interfaces.py  models.py
apps/backend/roundhouse/nodes/: __init__.py  models.py  registry.py
apps/backend/roundhouse/scripts/: manifest_sync_job.py
apps/backend/roundhouse/services/: __init__.py  environment.py  manifest_sync.py  panel_desktop.py  simulator_audit.py  simulator_compat.py  simulator_selection.py  status.py
apps/backend/roundhouse/tests/: test_architecture_locks.py
apps/backend/roundhouse/trestle_bridge/: __init__.py  client.py  contracts.py  interfaces.py  paths.py
core/: README.md  __init__.py
tools/: control-point-gate
(+80 files in other folders)
