[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Roundhouse FastAPI backend"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.3.0"
